RESOLVED FIXED104790
REGRESSION (r137432): The /webkit2/WebKitCookieManager/accept-policy unit test is failing
https://bugs.webkit.org/show_bug.cgi?id=104790
Summary REGRESSION (r137432): The /webkit2/WebKitCookieManager/accept-policy unit tes...
Zan Dobersek
Reported 2012-12-12 03:08:13 PST
http://trac.webkit.org/changeset/137432 Here's the output: TEST: ./Tools/gtk/../Scripts/../../WebKitBuild/Release/Programs/WebKit2APITests/TestCookieManager... (pid=20217) /webkit2/WebKitCookieManager/accept-policy: ** ERROR:../../Source/WebKit2/UIProcess/API/gtk/tests/TestCookieManager.cpp:176:void testCookieManagerAcceptPolicy(CookieManagerTest*, gconstpointer): assertion failed (test->getAcceptPolicy() == WEBKIT_COOKIE_POLICY_ACCEPT_NO_THIRD_PARTY): (1 == 2) FAIL
Attachments
Patch (4.59 KB, patch)
2012-12-13 01:29 PST, Joaquim Rocha
no flags
Joaquim Rocha
Comment 1 2012-12-12 03:11:05 PST
I will take a look.
Zan Dobersek
Comment 2 2012-12-12 03:13:39 PST
Joaquim Rocha
Comment 3 2012-12-13 01:29:36 PST
Joaquim Rocha
Comment 4 2012-12-13 01:30:57 PST
Comment on attachment 179229 [details] Patch Add cq?
Carlos Garcia Campos
Comment 5 2012-12-13 01:33:44 PST
Comment on attachment 179229 [details] Patch Thanks!
WebKit Review Bot
Comment 6 2012-12-13 03:11:35 PST
Comment on attachment 179229 [details] Patch Clearing flags on attachment: 179229 Committed r137581: <http://trac.webkit.org/changeset/137581>
WebKit Review Bot
Comment 7 2012-12-13 03:11:38 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.