REGRESSION (r137432): The /webkit2/WebKitCookieManager/accept-policy unit test is failing https://bugs.webkit.org/show_bug.cgi?id=104790

Patch by Joaquim Rocha <jrocha@igalia.com> on 2012-12-13
Reviewed by Carlos Garcia Campos.

Source/WebKit2:

The cookies accept policy and the cookies persistent storage type
were not being correctly assigned.

* UIProcess/WebContext.cpp: Set the default value of the cookie
accept policy.
(WebKit::WebContext::WebContext):
* UIProcess/gtk/WebContextGtk.cpp: Fix setting the cookies persistent
storage type (it was mistakenly assigning the policy instead) and
set the accept policy which was missing.
(WebKit::WebContext::platformInitializeWebProcess):

Tools:

Unskip the GTK accept policy test.

* Scripts/run-gtk-tests:
(TestRunner):

Canonical link: https://commits.webkit.org/123126@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137581 268f45cc-cd09-0410-ab3c-d52691b4dbfc